# stumbleuponbot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: tone-guide.md
docs/superpowers/plans/: 2026-06-10-scaffold-and-db.md  2026-06-10-scaffold-cleanups.md  2026-06-11-scraper.md  2026-06-12-captioner.md  2026-06-12-composer.md  2026-06-12-recorder.md  2026-06-15-poster.md  2026-06-15-reviewer.md  2026-06-16-launchd.md  2026-06-16-sounds.md
docs/superpowers/specs/: 2026-06-10-stumbleupon-pipeline-design.md  2026-06-16-launchd-design.md  2026-06-16-sounds-design.md
launchd/: com.user.stumbleupon.pipeline.plist  com.user.stumbleupon.poster.plist  com.user.stumbleupon.sounds.plist
scripts/: setup.sh
src/stumbleupon/: __init__.py  captioner.py  composer.py  config.py  db.py  launchd.py  main.py  models.py  notifier.py  poster.py  queue.py  recorder.py  reviewer.py  scraper.py  sounds.py
tests/: conftest.py  test_captioner.py  test_composer.py  test_config.py  test_db.py  test_launchd.py  test_main.py  test_models.py  test_notifier.py  test_poster.py  test_queue.py  test_recorder.py  test_reviewer.py  test_scraper.py  test_sounds.py
